--- a/Neutrinodevs.PedidosOnline.Presentation/Views/User/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/User/Index.cshtml
@@ -9,7 +9,7 @@
     <h1 style="padding-bottom: 3rem;">Usuarios</h1>
     <div class="row " style="margin-bottom: 3rem">
         <div class="col-xs-12 col-md-12">
-            <a href="/User/New" class="btn btn-primary ">Nuevo</a>
+            <a href="/User/New" class="btn btn-success ">Nuevo</a>
         </div>
     </div>
     <div class="table-responsive">
