--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
@@ -117,7 +117,7 @@
                 {
                     <div class="form-group">
                         <label for="username">Usuario</label>
-                        <input id="username" name="username" type="text" class="form-control" maxlength="50" autocomplete="off"/>
+                        <input id="username" name="username" type="text" class="form-control" maxlength="50" autocomplete="off" autofocus/>
                     </div>
                     <div class="form-group">
                         <label for="passsword">Contraseña</label>
