--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/style.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/style.css
@@ -994,3 +994,13 @@ ul.notifications > li > .more:hover, ul.notifications > li > .more:focus {
     font-size: 12px;
     padding-left: 5px;
 }
+.loader-container {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    background-color: rgba(0,0,0,0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
