--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
@@ -35,7 +35,7 @@ footer {
 header {
     height: 55vh;
     width: 100%;
-    background-image: url('/images/HeaderBackground.jpg');
+    background-image: url("../images/HeaderBackground.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
