--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_Navbar.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_Navbar.cshtml
@@ -1,6 +1,6 @@
 ﻿<nav class="navbar navbar-expand-md back-black" style="height:100px">
     <div class="container">
-        <a href="/Home">
+        <a href='@Url.Action("Index", "Home")'>
             <img src="~/images/logo-la-pesca.png" alt="Logo" class="logo-pesca"/>
         </a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
