--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
@@ -14,7 +14,7 @@
 
         const getOrderList = () => {
             $.ajax({
-                url: '/Dashboard/GetAll',
+                url: base_url+'/Dashboard/GetAll',
                 async: false,
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
@@ -66,7 +66,7 @@
         //let order_list = getOrderList();
         tbl_order_list = $("#tbl_order_list").DataTable({
             "language": {
-                "url": "/datatables.net/datatables-es_es.json"
+                "url": base_url+"/datatables.net/datatables-es_es.json"
             },
             paging: true,
             data: order_list,
