--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Home/About.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Home/About.cshtml
@@ -24,7 +24,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12 col-md-6 offset-md-6 pb-5">
-            <a href="/Home" class="btn back-primary btn-block">IR AL INICIO</a>
+            <a href='@Url.Action("Index", "Home")' class="btn back-primary btn-block">IR AL INICIO</a>
         </div>
     </div>
 </div>
