--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -26,8 +26,9 @@
 </head>
 <body>
     <script>
+        var base_url = '@Url.Content("~/")';
         const logout = () => {
-            window.location.href = "/";
+            window.location.href = base_url;
         }
     </script>
     @await Html.PartialAsync("_Preloader")
@@ -51,7 +52,7 @@
 
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="/images/dashboard/parson.png" class="img-circle" alt="parson-img">
+                                <img src="~/images/dashboard/parson.png" class="img-circle" alt="parson-img">
                                 <i class="icon-submenu fa fa-angle-down"></i>
                             </a>
                             <ul class="dropdown-menu">
