se arregla base_url en masterLayout

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+    Uri url = new Uri(String.Format("{0}://{1}", Context.Request.Scheme, Context.Request.Host));
+}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -16,12 +19,12 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
 
     <script>
-        var base_url = '@Url.Content("~/")';
+        var base_url = '@url.ToString()';
     </script>
     @RenderSection("HeaderScript", required: false)
 </head>
 <body class="animate__animated animate__fadeIn">
-    
+
     @await Html.PartialAsync("_Preloader")
     @*<partial name="_CookieConsentPartial" />*@
 
