--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
@@ -19,7 +19,7 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
 
     <script>
-        var base_url = '@url.ToString()';
+        var base_url = 'http://localhost/Pesca';
     </script>
     @RenderSection("HeaderScript", required: false)
 </head>
