--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -26,7 +26,7 @@
 </head>
 <body>
     <script>
-        var base_url = '@Url.Content("~/")';
+        var base_url = 'http://localhost/Pesca';
         const logout = () => {
             window.location.href = base_url;
         }
