Reporte diario por repartidor

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
@@ -11,7 +11,9 @@
         var options = {
             enableHighAccuracy: true,
             timeout: 5000,
-            maximumAge: 0
+            maximumAge: 0,
+            types: ['(cities)'],
+            componentRestrictions: { country: "us" }
         };
 
         if (navigator.geolocation) {
