Reporte de ventas para el administrador

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -79,11 +79,13 @@
                                     <i data-feather="home"></i> <span>Dashboard</span>
                                 </a>
                             </li>
-                            @*<li>
-                <a href='@Url.Action("Index", "Client")'>
-                    <i data-feather="clipboard"></i> <span>Clientes</span>
-                </a>
-            </li>*@
+
+                            <li>
+                                <a href='@Url.Action("SalesReport", "Dashboard")'>
+                                    <i data-feather="pie-chart"></i> <span>Reporte Ventas</span>
+                                </a>
+                            </li>
+
                             <li>
                                 <a href='@Url.Action("Index", "Dish")'>
                                     <i data-feather="anchor"></i> <span>Platos</span>
