avance de pantalla POS

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -81,6 +81,12 @@
                             </li>
 
                             <li>
+                                <a href='@Url.Action("NewSale", "Dashboard")'>
+                                    <i data-feather="dollar-sign"></i> <span>Nueva Venta</span>
+                                </a>
+                            </li>
+
+                            <li>
                                 <a href='@Url.Action("SalesReport", "Dashboard")'>
                                     <i data-feather="pie-chart"></i> <span>Reporte Ventas</span>
                                 </a>
@@ -163,6 +169,7 @@
         <!--bootstrap.min.js-->
         <script src="~/js/bootstrap.min.js"></script>
         <script src="~/js/dataTables.bootstrap3.min.js"></script>
+        <script src="~/js/main.js"></script>
     </environment>
     <!--jquery-1.12.4.min.js-->
     @*<script src="~/js/jquery.min.js"></script>*@
